# passport-rs

./: .editorconfig  .env.example  .gitattributes  .gitignore  Cargo.toml  Containerfile  Containerfile.distroless  Makefile  Makefile.toml  README.md  makefile  rustfmt.toml  sync.sh
.cargo/: config
.githooks/: pre-push
migrations/: 1567785996235_create_table_users.sql  1567785996235_create_users.sql  1567786506009_create_countries.sql  1567786506009_create_table_countries.sql  1567786519106_create_ranks.sql  1567786519106_create_table_user_leaderboard_ranks.sql  1567786529023_create_industries.sql  1567786529023_create_table_work_industries.sql  1567786535402_create_table_work_functions.sql  1567786535402_create_work_functions.sql  1567786548254_create_bank_accounts.sql  1567786572241_create_oauth_identities.sql  1567786582397_create_table_user_clue_infos.sql  1567786582397_create_user_clues.sql  1567786600537_create_table_user_clue_work_preferences.sql  1567786600537_create_user_work_preferences.sql  1567786605072_create_table_user_clue_work_experiences.sql  1567786621884_create_projects.sql  1567786639529_create_project_issues.sql  1567786651107_create_project_members.sql  1567793535082_create_project_clues.sql  1726584567320_create_table_work_contract_types.sql  1726584567321_create_table_work_experience_levels.sql  1726584567322_create_organizations.sql  1726584567322_create_table_organizations.sql  1726584567323_create_jobs.sql  1726584567323_create_table_jobs.sql  1728978640652_alter_table_jobs_addcol_fts.sql  1729077181293_create_table_counters.sql  1729078328480_alter_table_jobs_addtr_updated_at.sql  1729596794750_create_table_job_tags.sql  1729596832712_create_table_map_jobs_to_job_tags.sql  1729745155734_create_table_pubsub_job_announcements.sql
src/: api.rs  (+8 more)
(+49 files in other folders)
