[package]
name = "passport"
version = "1.1.0"
authors = ["ffimnsr <ffimnsr@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
actix = "0.8"
actix-web = "1.0"
dotenv = "0.14"
serde = "1.0"
serde_json = "1.0"
futures = "0.1"
log = "0.4"
env_logger = "0.6"
r2d2 = "0.8"
r2d2_sqlite = "0.11"
chrono = {version = "0.4", features = ["serde"]}
uuid = {version = "0.7", features = ["serde", "v4"]}
url = "1.7"
juniper = "0.12"
rusqlite = "0.19"
lazy_static = "1.3"
bcrypt = "0.4"
