[package]
name = "passport"
version = "1.1.0"
authors = ["ffimnsr <ffimnsr@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
actix = "0.8"
actix-web = "1.0"
dotenv = "0.14"
serde = "1.0"
serde_json = "1.0"
futures = "0.1"
log = "0.4"
env_logger = "0.6"
r2d2 = "0.8"
r2d2_postgres = "0.15.0-rc.1"
chrono = {version = "0.4", features = ["serde"]}
uuid = {version = "0.7", features = ["serde", "v4"]}
url = "1.7"
juniper = "0.12"
lazy_static = "1.3"
bcrypt = "0.4"
failure = "0.1.5"
postgres = "0.16.0-rc.2"
reqwest = "0.9"
