[package]
name = "passport-rs"
version = "1.1.0"
authors = ["Edward Fitz Abucay <gh:@ffimnsr>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
regex = "1"
actix-web = "4.9"
dotenv = "0.15"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
url = "2.5"
lazy_static = "1.5"
bcrypt = "0.15"
reqwest = "0.12"
listenfd = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
sqlx-core = "0.8"
casbin = "2.5"
indoc = "2"
